# PurkinjeUV

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  seeding.html  switcher.json  tox.ini  welcome.html
.doctrees/: environment.pickle  index.doctree  references.doctree  seeding.doctree  welcome.doctree
.doctrees/api/: modules.doctree  purkinje_uv.doctree
.doctrees/dev/: architecture.doctree  data_model_invariants.doctree  index.doctree  performance.doctree  reproducibility.doctree
.doctrees/theory/: fundamentals_2d.doctree  index.doctree  projection_surface.doctree
.doctrees/usage/: index.doctree  quickstart.doctree  workflow.doctree
.github/workflows/: docs.yml  release-please.yml  release.yml  test.yml
_sources/: index.rst.txt
_sources/api/: purkinje_uv.rst.txt
_sources/theory/: fundamentals_2d.rst.txt  projection_surface.rst.txt
api/: modules.html  purkinje_uv.html
dev/: architecture.html  data_model_invariants.html  index.html  performance.html  reproducibility.html
docs/: conf.py
docs/api/: purkinje_uv.rst
docs/dev/: architecture.rst
docs/usage/: quickstart.rst
examples/: 00_basic_tree.ipynb  01_ellipsoid_demo.ipynb  02_crt_demo.ipynb  03_ellipsoid_demo_gpu.ipynb  Dijk.ipynb  example_fractal_tree_3d.py  example_mesh.py  example_parameters.py  example_purkinje_tree.py  interactive_labeling_poc.py  minimal_example.ipynb
examples/demo_gmsh/: demo_fractal_tree_biventricular.ipynb
examples/demo_obj/: demo_obj_fractal_tree.ipynb
main/: .buildinfo  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  seeding.html  welcome.html
main/.doctrees/: environment.pickle  index.doctree  references.doctree  seeding.doctree  welcome.doctree
main/.doctrees/api/: modules.doctree  purkinje_uv.doctree
main/.doctrees/dev/: architecture.doctree  data_model_invariants.doctree  index.doctree  performance.doctree  reproducibility.doctree
main/.doctrees/theory/: fundamentals_2d.doctree  index.doctree  projection_surface.doctree
main/.doctrees/usage/: index.doctree  quickstart.doctree  workflow.doctree
main/_sources/: index.rst.txt
main/_sources/dev/: reproducibility.rst.txt
main/_sources/usage/: workflow.rst.txt
main/api/: modules.html  purkinje_uv.html
main/dev/: architecture.html  data_model_invariants.html  index.html  performance.html  reproducibility.html
main/examples/: 00_basic_tree.html  00_basic_tree.ipynb  01_ellipsoid_demo.html  01_ellipsoid_demo.ipynb  02_crt_demo.html  02_crt_demo.ipynb  index.html
main/theory/: fundamentals_2d.html  index.html  projection_surface.html
main/usage/: index.html  quickstart.html  workflow.html
src/purkinje_uv/: FractalTreeUV.py  Mesh.py  PurkinjeTree.py  __init__.py  branch.py  edge.py  fractal_tree.py  fractal_tree_parameters.py  fractal_tree_uv.py  igbutils.py  mesh.py  nodes.py  purkinje_tree.py  vtkutils.py
src/utils/: __init__.py  igb_reader.py  paraview_writer.py  vtkutils.py
tests/: test_fractal_tree_parameters.py
tests/e2e/: compare_vtu_metrics.py  test_end_to_end_activation.py  test_end_to_end_ellipsoid.py  test_generate_ellipsoid_vtu.py  visual_compare_vtu.py
tests/e2e/output/: ellipsoid_purkinje.vtu
tests/purkinje_uv/: test_branch.py  test_edge.py  test_fractal_tree_parameters.py  test_nodes.py  test_purkinje_tree.py
tests/purkinje_uv/mesh/: conftest.py
tests/utils/: test_igb_reader.py  test_paraview_writer.py
theory/: fundamentals_2d.html  index.html  projection_surface.html
usage/: index.html  quickstart.html  workflow.html
v0.3.0/: .buildinfo  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  seeding.html  welcome.html
v0.3.0/.doctrees/: environment.pickle  index.doctree  references.doctree  seeding.doctree  welcome.doctree
v0.3.0/.doctrees/api/: modules.doctree  purkinje_uv.doctree
v0.3.0/.doctrees/dev/: architecture.doctree  data_model_invariants.doctree  index.doctree  performance.doctree  reproducibility.doctree
v0.3.0/.doctrees/theory/: fundamentals_2d.doctree  index.doctree  projection_surface.doctree
v0.3.0/.doctrees/usage/: index.doctree  quickstart.doctree  workflow.doctree
v0.3.0/_sources/usage/: quickstart.rst.txt
v0.3.0/api/: modules.html  purkinje_uv.html
v0.3.0/dev/: architecture.html  data_model_invariants.html  index.html  performance.html  reproducibility.html
v0.3.0/theory/: fundamentals_2d.html  index.html  projection_surface.html
v0.3.0/usage/: index.html  quickstart.html  workflow.html
